datasets/dataset_txt/pipenv/pipenv_229.txt
waprin commented on 21 Mar 2019
Possible duplicate of #2275 which was closed despite the original opener saying the issue wasn't resolved.
With pip 18.1 (python 3.6)
pip install yamlfmt
works fine while with pipenv 2018.11.26 ,
pipenv install yamlfmt
gives issues about installing ruamel.ordereddict:
                      ^', "    ordereddict.c:974:10: error: use of undeclared identifier '_PyThreadState_Current'", '            &_PyThreadState_Current);', '             ^', '    ordereddict.c:1581:47: error: too many arguments to function call, expected 2, have 3', '                                                  &missing_str);', '                                                  ^~~~~~~~~~~~', "    /usr/local/Cellar/python/3.7.2_2/Frameworks/Python.framework/Versions/3.7/include/python3.7m/object.h:507:12: note: '_PyObject_LookupSpecial' declared here", '    PyAPI_FUNC(PyObject *) _PyObject_LookupSpecial(PyObject *, _Py_Identifier *);', '               ^', "    ordereddict.c:1650:15: warning: comparison of integers of different signs: 'Py_ssize_t' (aka 'long') and 'unsigned long' [-Wsign-compare]", '            if (s > sizeof(recycle_on_stack)) {', '                ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~', "    ordereddict.c:2858:13: error: no member named 'ma_table' in 'PyDictObject'", '        if (mp->ma_table != mp->ma_smalltable)', '            ~~  ^', "    ordereddict.c:2858:29: error: no member named 'ma_smalltable' in 'PyDictObject'", '        if (mp->ma_table != mp->ma_smalltable)', '                            ~~  ^', "    ordereddict.c:2859:26: error: no member named 'ma_mask' in 'PyDictObject'", '            res = res + (mp->ma_mask + 1) * sizeof(PyOrderedDictEntry);', '                         ~~  ^', '    2 warnings and 5 errors generated.', "    error: command 'clang' failed with exit status 1", '    ', '    ----------------------------------------']
[pipenv.exceptions.InstallError]: ['Failed building wheel for ruamel.ordereddict', 'Command "/Users/bprin/.local/share/virtualenvs/test-dxQmuQn2/bin/python3.7 -u -c "import setuptools, tokenize;__file__=\'/private/var/folders/cr/smds0c8x225gnbb3cc9lcsxm0000gn/T/pip-install-2mq0sd2c/ruamel.ordereddict/setup.py\';f=getattr(tokenize, \'open\', open)(__file__);code=f.read().replace(\'\\r\\n\', \'\\n\');f.close();exec(compile(code, __file__, \'exec\'))" install --record /private/var/folders/cr/smds0c8x225gnbb3cc9lcsxm0000gn/T/pip-record-nq7r2yyq/install-record.txt --single-version-externally-managed --compile --install-headers /Users/bprin/.local/share/virtualenvs/test-dxQmuQn2/bin/../include/site/python3.7/ruamel.ordereddict" failed with error code 1 in /private/var/folders/cr/smds0c8x225gnbb3cc9lcsxm0000gn/T/pip-install-2mq0sd2c/ruamel.ordereddict/']
ERROR: ERROR: Package installation